ensure that even if the url is empty, we create some parent to avoid accessing nullptr parent

BUG: 427270


(cherry picked from commit ea4fe985c9123adc3f67d07c1ae60bac4da52813)